# ReactionGPT

./: README.md  inspect_pickle.py  pyproject.toml
ChemBPETokenizer/: tokenizer.json
src/: audit_data.py  config.py  inference.py  utils.py
src/Model/: Attention.py  ClassificationDataLoader.py  GPT.py  GPTDataloader.py  Tokenizer.py  Transformer.py
src/Train/: pretrain.py  train_classifier.py  train_tokenizer.py
src/scripts/: augment_dataset.py  balance_dataset.py  filter_dataset.py
tests/: test_context_window.py  test_loader.py
