[project]
name = "chemgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pytest>=9.0.2",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
